testdata/baselines/reference/submodule/conformance/moduleExportsElementAccessAssignment2.errors.txt
file1.js(5,12): error TS8010: Type annotations can only be used in TypeScript files.
file1.js(6,12): error TS8010: Type annotations can only be used in TypeScript files.
file1.js(7,12): error TS8010: Type annotations can only be used in TypeScript files.


==== file1.js (3 errors) ====
    // this file _should_ be a global file
    var GlobalThing = { x: 12 };
    
    /**
     * @param {*} type 
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {*} ctor
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {*} exports
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f(type, ctor, exports) {
        if (typeof exports !== "undefined") {
            exports["AST_" + type] = ctor;
        }
    }
    
==== ref.js (0 errors) ====
    GlobalThing.x
    